--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
         <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
+        <header>
+          <h1>Hi, <span>I'm Alexandra.</span></h1>
+          </header>
+        <main>Here is a little information about me...</main>
         <section class="wrapper">
             <div class="div-1">
                 Proud roots from Buffalo, NY but now hails from the sunny shores of the North Carolinian coast. I still miss the winter wonderland for Christmas and the chicken wings, but have no regrets moving to the South.
@@ -33,6 +35,7 @@
                 Having an old soul, I appreciate a lot of the cultural pasttime such as music, movies, clothing, and traditions. If it wasn't for my age, one would think I am a lot older.
             </div>
         </section>
+        <footer>&copy; 2019 Alexandra Thomas</footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
